[gd_scene load_steps=7 format=3 uid="uid://ctqilicqj6ruk"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_oiei1"]
[ext_resource type="Script" path="res://Script/UI/SelectFriendItem.gd" id="2_1r1kd"]
[ext_resource type="Texture2D" uid="uid://bee3h05vau7ay" path="res://icon.svg" id="2_rids0"]
[ext_resource type="FontFile" uid="uid://ri6183bsibm8" path="res://Assets/Font/SourceHanSansCN-Bold.otf" id="3_30q13"]
[ext_resource type="LabelSettings" uid="uid://c1lap0u84heih" path="res://Assets/LabelSetting/UITitle.tres" id="4_aw2bs"]

[sub_resource type="LabelSettings" id="LabelSettings_810a2"]
font = ExtResource("3_30q13")
font_size = 50
font_color = Color(0.992157, 0.945098, 0.827451, 1)
shadow_color = Color(0, 0, 0, 0.25098)
shadow_offset = Vector2(0, 2)

[node name="SelectFriendItem" type="Panel"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_oiei1")
theme_type_variation = &"SubPanel"
script = ExtResource("2_1r1kd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = ExtResource("2_rids0")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "信哥"
label_settings = SubResource("LabelSettings_810a2")

[node name="RateLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "史诗"
label_settings = ExtResource("4_aw2bs")

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="YesBtn" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "选择"
